washngo (2.12.0-1) UNRELEASED; urgency=low

  * Same upstream version, but packaged and published on cabal

 -- Joachim Breitner <nomeata@debian.org>  Mon, 19 Apr 2010 15:16:14 +0200

washngo (2.12-7) unstable; urgency=low

  * Orphaning this package.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 17 Feb 2010 15:30:37 -0600

washngo (2.12-6) unstable; urgency=high

  * Rebuilding for new GHC.
  * Ack NMU.  Closes: #502758.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 19 Jan 2009 10:26:16 -0600

washngo (2.12-5.1) unstable; urgency=low

  * Non-maintainer upload.
  * Add dh_haskell_depends to debian/rules (fix by Chris Lamb).
    Closes: #502758.

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Oct 2008 17:48:02 +0000

washngo (2.12-5) unstable; urgency=low

  * The Debian diff.gz didn't note the deleteion of Setup.lhs.
    Make sure that happens in debian/rules.  Closes: #468935.

 -- John Goerzen <jgoerzen@complete.org>  Sun, 02 Mar 2008 07:59:34 -0600

washngo (2.12-4) unstable; urgency=low

  * Lots of build system changes to make sure the package gets
    registered in GHC and builds like a more normal package.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 28 Feb 2008 06:48:32 -0600

washngo (2.12-3) unstable; urgency=low

  * Added build-deps on libghc6-regex-compat-dev and libghc6-parsec-dev.
    Closes: #465032.
  * Changed VCS lines in debian/control to new format and updated
    for Git.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 26 Feb 2008 21:38:16 -0600

washngo (2.12-2) unstable; urgency=low

  * Update for GHC 6.8.  Closes: #460377.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 30 Jan 2008 01:41:51 -0600

washngo (2.12-1) unstable; urgency=medium

  * New upstream release.
  * Modify Makefile to explicitly compile Setup.lhs.  Closes: #431843.
  * Redo build system so ghci is not required for build.
    Requires haskell-devscripts >= 0.5.19.  Closes: #431843.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 22 Oct 2007 09:31:30 -0500
