@@ -1,2 +1,0 @@
-README
-debian/tmp/build/libghc6-wash-dev/dist/doc
