@@ -1,9 +1,0 @@
-Document: wash
-Title: Debian WASH Manual
-Author: Peter Thiemann
-Abstract: This manual describes the WASH API.
-Section: Apps/Programming
-
-Format: HTML
-Index: /usr/share/doc/libghc6-wash-dev/doc/html/index.html
-Files: /usr/share/doc/libghc6-wash-dev/doc/html/*.html
