@@ -1,6 +1,7 @@
 washngo (2.12.0-1) UNRELEASED; urgency=low
 
   * Same upstream version, but packaged and published on cabal
+  * Adopt by the Debian Haskell Group, redo packaging. (Closes: #570284)
 
  -- Joachim Breitner <nomeata@debian.org>  Mon, 19 Apr 2010 15:16:14 +0200
 
